--- a/Second_file.html
+++ b/Second_file.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title2</title>
-    <p> This is second file!</p>
+    <p> This is second file! Sale</p>
 </head>
 <body>
 
