--- a/Third_file.html
+++ b/Third_file.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title3</title>
-    <p> This is 3rd file</p>
-</head>
-<body>
-
-</body>
-</html>
+baraba
